--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title></title>
   <script src="../../polymer/polymer.js"></script>
   <link href="topcoat-0.4.1/css/topcoat-mobile-dark.min.css" rel="stylesheet" />
+  <link xhref="topcoat-0.4.1/css/topcoat-mobile-light.min.css" rel="stylesheet" />
+  <link xhref="topcoat-0.4.1/css/topcoat-desktop-dark.min.css" rel="stylesheet" />
+  <link xhref="topcoat-0.4.1/css/topcoat-desktop-light.min.css" rel="stylesheet" />
   <link rel="import" href="topcoat.html">
 </head>
 <body>
@@ -11,15 +14,20 @@
   <topcoat-button>Button Coat</topcoat-button>
   <topcoat-button active>Button Boat</topcoat-button>
   <topcoat-button disabled>Mutton Stoat</topcoat-button>
-  <br>
-  <topcoat-icon-button></topcoat-icon-button>
-  <topcoat-icon-button></topcoat-icon-button>
-  <br>
-  <topcoat-list header="Heya">
+  <br><br>
+  <topcoat-icon-button icon="menu-stack"></topcoat-icon-button>
+  <topcoat-icon-button icon="menu-stack"></topcoat-icon-button>
+  <br><br>
+  <!-- <topcoat-list header="Heya">
     <li is="topcoat-list-item">Hello</li>
     <li is="topcoat-list-item">World</li>
-    <li is="topcoat-list-item">Welt</li>
     <li is="topcoat-list-item">Tag</li>
-  </topcoat-list>
-</body>
+    <li is="topcoat-list-item">Welt</li>
+  </topcoat-list> -->
+  <topcoat-list header="Heya">
+    <span>Hello</span>
+    <span>World</span>
+    <span><b>Tag</b></span>
+    <span>Welt</span>
+  </topcoat-list></body>
 </html>
