--- a/sample-simple.html
+++ b/sample-simple.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title></title>
-  <script src="../../polymer/polymer.js"></script>
+  <script src="../platform/platform.js"></script>
   <link href="topcoat-0.5.1/css/topcoat-mobile-dark.min.css" rel="stylesheet" />
-  <link rel="import" href="elements/topcoat-simple-elements.html">
+  <link rel="import" href="topcoat-simple-elements.html">
 </head>
 <body>
   <br>
