--- a/topcoat-list.html
+++ b/topcoat-list.html
@@ -1,7 +1,9 @@
+<link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="topcoat-common.html">
-﻿<polymer-element name="topcoat-list">
+
+﻿<polymer-element name="topcoat-list" noscript>
   <template>
-    <link rel="stylesheet" href="css/list-mobile-dark.css">
+    <link rel="stylesheet" href="assets/css/list-mobile-dark.css">
     <div class="header">
       <content class="header" select=".header"></content>
     </div>
