--- a/topcoat-simple-elements.html
+++ b/topcoat-simple-elements.html
@@ -1,3 +1,5 @@
+<link rel="import" href="../polymer/polymer.html">
+
 <polymer-element name="topcoat-button" attributes="active disabled">
   <template>
     <a class="topcoat-button {{isdisabled: disabled}}"><content></content></a>
