--- a/topcoat-icon-button.html
+++ b/topcoat-icon-button.html
@@ -1,8 +1,10 @@
+<link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="topcoat-common.html">
+
 ﻿<polymer-element name="topcoat-icon-button" extends="a" attributes="icon large">
   <template>
-    <link rel="stylesheet" href="css/icon-button-mobile-dark.css">
-    <link rel="stylesheet" href="css/icons.css">
+    <link rel="stylesheet" href="assets/css/icon-button-mobile-dark.css">
+    <link rel="stylesheet" href="assets/css/icons.css">
     <span class="topcoat-icon {{icon}} {{large: large}}"></span>
   </template>
   <script>
