forgot two instances of @host

--- a/topcoat-simple-elements.html
+++ b/topcoat-simple-elements.html
@@ -49,9 +49,9 @@
 <polymer-element name="xtopcoat-list" attributes="header">
   <template>
     <style>
-      @host {*{
+      :host {
         display: block;
-      }}
+      }
     </style>
     <div class="topcoat-list__container">
       <h3 class="topcoat-list__header">{{header}}</h3>
@@ -70,9 +70,9 @@
 <polymer-element name="topcoat-list" attributes="header">
   <template>
     <style>
-      @host {*{
+      :host {
         display: block;
-      }}
+      }
     </style>
     <div class="topcoat-list__container">
       <h3 class="topcoat-list__header">{{header}}</h3>
