--- a/topcoat-button.html
+++ b/topcoat-button.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="topcoat-common.html">
 
-﻿<polymer-element name="topcoat-button" extends="a" noscript>
+<polymer-element name="topcoat-button" extends="a" noscript>
   <template>
     <link rel="stylesheet" href="assets/css/button-mobile-dark.css">
     <content></content>
