--- a/topcoat-navbar.html
+++ b/topcoat-navbar.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="topcoat-common.html">
 
-﻿<polymer-element name="topcoat-navbar" noscript>
+<polymer-element name="topcoat-navbar" noscript>
   <template>
     <link rel="stylesheet" href="assets/css/navbar-mobile-dark.css">
     <content></content>
